<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="766dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/verify_text"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/border"
                    android:text="@string/now"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/bank_png" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:text="@string/account"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/account_details" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/purple"
                    android:fontFamily="sans-serif"
                    android:text="@string/set_account"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:cornerRadius="10dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/loan" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:text="@string/apply"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/apply_desc" />

                <com.shuhart.stepview.StepView
                    android:id="@+id/step_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:padding="15dp"
                    app:sv_animationType="Line"
                    app:sv_doneCircleColor="@color/green"
                    app:sv_doneCircleRadius="12dp"
                    app:sv_doneStepLineColor="@color/green"
                    app:sv_doneStepMarkColor="@color/white"
                    app:sv_doneTextColor="@color/green"
                    app:sv_nextStepLineColor="@color/black"
                    app:sv_nextTextColor="@color/black"
                    app:sv_selectedCircleColor="@color/purple"
                    app:sv_selectedCircleRadius="12dp"
                    app:sv_selectedStepNumberColor="@color/white"
                    app:sv_selectedTextColor="@color/purple"
                    app:sv_stepLineWidth="1dp"
                    app:sv_stepPadding="4dp"
                    app:sv_stepViewStyle="@style/StepView"
                    app:sv_steps="@array/steps"
                    app:sv_stepsNumber="4" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/purple"
                        android:fontFamily="sans-serif"
                        android:text="@string/reapply"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:cornerRadius="10dp" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/red"
                        android:fontFamily="sans-serif"
                        android:text="@string/status"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:cornerRadius="10dp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="604dp"
                android:layout_height="350dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/calculator" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:text="@string/calc"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/calc_details" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/purple"
                    android:fontFamily="sans-serif"
                    android:text="@string/calcu"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:cornerRadius="10dp" />

                <LinearLayout
                    android:layout_width="586dp"
                    android:layout_height="159dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="20dp"
                            android:src="@drawable/stats_updates" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="20dp"
                            android:text="@string/updates"
                            android:textSize="18sp"
                            android:textStyle="bold" />


                    </LinearLayout>


                    <com.github.hamzaahmedkhan.counteranimationtextview.CountAnimationTextView
                        android:id="@+id/user_counter"
                        android:layout_width="212dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="0"
                        android:textColor="@color/green"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="331dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/issued"
                        android:textColor="@color/green" />


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>